Updating course.css to prevent course cards from overlapping with the background image

--- a/react-frontend/src/styles/course.css
+++ b/react-frontend/src/styles/course.css
@@ -8,10 +8,9 @@
   color: #154185;
   max-width: 100vw;
   width: 80%;
-  margin-top: 50px;
-  margin-bottom: 30px;
+  margin-top: 40px;
+  margin-bottom: -20px;
   overflow-y: auto;
-  padding-bottom: 16px;
   border-radius: 6px;
 }
 
@@ -25,11 +24,11 @@
 .courseContent {
   max-width: 100vw;
   width: 80%;
-  margin-bottom: 50px;
-  overflow-y: auto;
+  margin-top: 50px;
   padding-bottom: 16px;
   border: 1px solid #225cb5;
   border-radius: 6px;
+  background-color: #FFFFFF;
 }
 
 
@@ -91,7 +90,7 @@
   width: 100%;
   padding: 0 20px;
   border-collapse: collapse;
-
+  background-color: #FFFFFF;
 }
 
 .surveyTable th,
